# REST

./: .gitignore  pyproject.toml
backend/: db.sqlite3
backend/api/: urls.py  views.py
backend/model_decorators/: apps.py  models.py
backend/model_decorators/migrations/: 0001_initial.py  0002_order.py  0003_article.py
backend/products/: models.py  serializers.py
backend/products/migrations/: 0001_initial.py  0002_book.py
backend/project1/: settings.py  urls.py
py_client/: basic.py  basic1.py  basic2.py  basic3.py  basic4.py  basic5.py  basic6.py
